--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Simple GraphQL server",
   "main": "server.js",
   "scripts": {
-    "dev:server": "nodemon server.js"
+    "dev:server": "nodemon server.js",
+    "json:server": "json-server --watch data.json"
   },
   "author": "Md. Shahadat Hossain",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "json-server": "^0.14.0"
   }
 }
